k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mysql-deployment

spec:
  replicas: 1

  selector: 
    matchLabels: 
      component: mysql

  template:
    metadata:
      labels: 
        component: mysql

    spec:
      volumes:
          - name: database-pvc
            persistentVolumeClaim:
                  claimName: database-pvc
      containers:
          - name: mysql-container
            image: mysql
            resources:
              requests:
                cpu: 100m
                memory: 100Mi
              limits:
                cpu: 100m
                memory: 100Mi
            ports:
              - containerPort: 3306
            volumeMounts:
              - name: database-pvc
                mountPath: /var/lib/mysql
                subPath: mysql
