k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-deployment

spec:
  replicas: 1
  selector:
      matchLabels:
        component: redis

  template:
    metadata:
      labels:
        component: redis
    spec:
        containers:
            - name: redis-container
              image: redis
              resources:
                requests:
                  cpu: 100m
                  memory: 100Mi
                limits:
                  cpu: 100m
                  memory: 100Mi
              ports:
                  - containerPort: 6379
