k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment

spec:
  replicas: 3

  selector:
      matchLabels:
          component: server

  template:
    metadata:
      labels:
        component: server

    spec:
      containers:
        - name: server-container
          image: abdelrahman1993/multi-server:v2
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 5000
